syntax = "proto3";

option csharp_namespace = "vesselMotionService";

package vesselMotionService.v1;

message MotionEstimateRequest {
    repeated float port_prop_motor_power = 1;
    repeated float wind_speed_relative = 2;
    repeated float latitude = 3;
    repeated float Heading = 4;
    repeated float wave_height = 5;
    LocationOnShipEnum query_location = 6;
}

message MotionTrackingRequest {

}

message MotionResponse {
    repeated float acceleration = 1;
}

message MotionEvaluationResponse {
    repeated float acceleration_estimate = 1;
    repeated float acceleration_actual = 2;
}

// 'Vessel Motion Service; offers three service calls that provide information about the vessel's motion in response to her sailing conditions (mainly regarding the high frequency component of the vessel's acceleration/vibration)
service vesselMotionService {
    // The 'Motion Estimate' call provides foresight for tactical decision-making by providing high-frequency acceleration estimates for a requested sailing conditions at a requested location on the ship
    rpc MotionEstimate(MotionEstimateRequest) returns (MotionResponse);
    // The 'Motion Tracking' call provides insight for tactical decision-making by providing real-time, high-frequency acceleration readings for a requested location on the ship
    rpc MotionTracking(MotionTrackingRequest) returns (MotionResponse);
    // The 'Motion Estimation Evaluation' call provides hindsight for strategic decision-making by evaluating the accuracy of the models predictions
    rpc MotionEstimateEvaluation(MotionEstimateRequest) returns (MotionEvaluationResponse);
}

enum LocationOnShipEnum {
    UNKNOWN = 0;
    SOMEWHERE = 1;
}